--- a/Lines22.ipynb
+++ b/Lines22.ipynb
@@ -24,28 +24,56 @@
       "metadata": {
         "id": "ftOOozryrI-r"
       },
-      "execution_count": 166,
+      "execution_count": 180,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Загрузка данных о Выделенных полосах\n",
+        "gdf_bus_lanes = gpd.read_file(\"bus-lanes.geojson\")\n",
+        "# Выделяем линии Москвы\n",
+        "gdf_bus_lanes = gdf_bus_lanes[gdf_bus_lanes['short_name'] == 'Москва']\n",
+        "# Устанавливаем корректную CRS\n",
+        "gdf_bus_lanes = gdf_bus_lanes.set_crs(\"EPSG:4326\")\n",
+        "# gdf_bus_lanes.sample(1)"
+      ],
+      "metadata": {
+        "id": "B9gevWDfrQh7"
+      },
+      "execution_count": 183,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Преобразуем CRS в метры (EPSG:3857)\n",
+        "gdf_bus_lanes = gdf_bus_lanes.to_crs(epsg=3857)\n",
+        "# Делаем buffer на 50 метров\n",
+        "gdf_bus_lanes[\"geometry\"] = gdf_bus_lanes.geometry.buffer(50)\n",
+        "# Возвращаем обратно в географические координаты (EPSG:4326)\n",
+        "gdf_bus_lanes = gdf_bus_lanes.to_crs(epsg=4326)\n",
+        "# gdf_bus_lanes.sample(2)\n",
+        "# Объединяем все POLYGON в один\n",
+        "bus_lanes_union = unary_union(gdf_bus_lanes.geometry)"
+      ],
+      "metadata": {
+        "id": "oMSoQpiOfelq"
+      },
+      "execution_count": 184,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "# 'trips.xlsx' is uploaded to Colab environment\n",
-        "df_trips = pd.read_excel('77403_17.02.25-17.03.25.xlsx', header=0)  # header=0 means the first row is the header\n",
-        "# df_trips.sample(2)"
+        "df_trips = pd.read_excel('77107_21.02.25-22.03.25.xlsx', header=0)  # header=0 means the first row is the header"
       ],
       "metadata": {
         "id": "jmh_drPPrQlM"
       },
-      "execution_count": 167,
+      "execution_count": 181,
       "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [],
-      "metadata": {
-        "id": "eUlw9p3UTheP"
-      }
     },
     {
       "cell_type": "code",
@@ -65,7 +93,7 @@
         "df_trips['geometry'] = [Point(lon, lat) for lon, lat in zip(df_trips['Longitude'], df_trips['Latitude'])]\n",
         "df_trips = gpd.GeoDataFrame(df_trips, geometry='geometry', crs=\"EPSG:4326\")\n",
         "\n",
-        "df_trips.sample(2)"
+        "# df_trips.sample(1)"
       ],
       "metadata": {
         "colab": {
@@ -73,29 +101,29 @@
           "height": 147
         },
         "id": "gUeNqpi3rY-s",
-        "outputId": "3fcba936-10a4-48d8-9650-223246608e92"
+        "outputId": "11064e8e-d6f4-4bdb-c851-9fb0ede997cc"
       },
-      "execution_count": 169,
+      "execution_count": 182,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "                               Car_ID            Day_time  \\\n",
-              "27995  77403 (М947ОК67) Renault Logan 2025-03-09 14:14:22   \n",
-              "26565  77403 (М947ОК67) Renault Logan 2025-03-08 18:05:23   \n",
+              "                             Car_ID            Day_time  \\\n",
+              "29052  77107 (М530РУ67) Lada Granta 2025-03-08 07:12:12   \n",
+              "47733  77107 (М530РУ67) Lada Granta 2025-03-18 14:38:46   \n",
               "\n",
-              "                  Сoordinates  Speed_gl Ignition   Latitude  Longitude  \\\n",
-              "27995  55,766973°, 37,830356°         0        -  55.766973  37.830356   \n",
-              "26565  55,768668°, 37,831313°         5        +  55.768668  37.831313   \n",
+              "                 Сoordinates  Speed_gl Ignition   Latitude  Longitude  \\\n",
+              "29052  55,942725°, 37,50323°         7     Вкл.  55.942725   37.50323   \n",
+              "47733  55,94242°, 37,513113°        32     Вкл.   55.94242  37.513113   \n",
               "\n",
               "                        geometry  \n",
-              "27995  POINT (37.83036 55.76697)  \n",
-              "26565  POINT (37.83131 55.76867)  "
+              "29052  POINT (37.50323 55.94272)  \n",
+              "47733  POINT (37.51311 55.94242)  "
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-4334af15-7233-4b90-b363-2f5b90ffbf39\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-d246899a-f259-41f3-aade-082eab75466d\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -126,26 +154,26 @@
               "  </thead>\n",
               "  <tbody>\n",
               "    <tr>\n",
-              "      <th>27995</th>\n",
-              "      <td>77403 (М947ОК67) Renault Logan</td>\n",
-              "      <td>2025-03-09 14:14:22</td>\n",
-              "      <td>55,766973°, 37,830356°</td>\n",
-              "      <td>0</td>\n",
-              "      <td>-</td>\n",
-              "      <td>55.766973</td>\n",
-              "      <td>37.830356</td>\n",
-              "      <td>POINT (37.83036 55.76697)</td>\n",
+              "      <th>29052</th>\n",
+              "      <td>77107 (М530РУ67) Lada Granta</td>\n",
+              "      <td>2025-03-08 07:12:12</td>\n",
+              "      <td>55,942725°, 37,50323°</td>\n",
+              "      <td>7</td>\n",
+              "      <td>Вкл.</td>\n",
+              "      <td>55.942725</td>\n",
+              "      <td>37.50323</td>\n",
+              "      <td>POINT (37.50323 55.94272)</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>26565</th>\n",
-              "      <td>77403 (М947ОК67) Renault Logan</td>\n",
-              "      <td>2025-03-08 18:05:23</td>\n",
-              "      <td>55,768668°, 37,831313°</td>\n",
-              "      <td>5</td>\n",
-              "      <td>+</td>\n",
-              "      <td>55.768668</td>\n",
-              "      <td>37.831313</td>\n",
-              "      <td>POINT (37.83131 55.76867)</td>\n",
+              "      <th>47733</th>\n",
+              "      <td>77107 (М530РУ67) Lada Granta</td>\n",
+              "      <td>2025-03-18 14:38:46</td>\n",
+              "      <td>55,94242°, 37,513113°</td>\n",
+              "      <td>32</td>\n",
+              "      <td>Вкл.</td>\n",
+              "      <td>55.94242</td>\n",
+              "      <td>37.513113</td>\n",
+              "      <td>POINT (37.51311 55.94242)</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
@@ -153,7 +181,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-4334af15-7233-4b90-b363-2f5b90ffbf39')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-d246899a-f259-41f3-aade-082eab75466d')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -205,12 +233,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-4334af15-7233-4b90-b363-2f5b90ffbf39 button.colab-df-convert');\n",
+              "        document.querySelector('#df-d246899a-f259-41f3-aade-082eab75466d button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-4334af15-7233-4b90-b363-2f5b90ffbf39');\n",
+              "        const element = document.querySelector('#df-d246899a-f259-41f3-aade-082eab75466d');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -230,8 +258,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-82a4e0ff-f711-47f7-bbec-dc6f9bb19be8\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-82a4e0ff-f711-47f7-bbec-dc6f9bb19be8')\"\n",
+              "<div id=\"df-74d0b7d4-66a6-4dae-b744-3d9a4cba7f60\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-74d0b7d4-66a6-4dae-b744-3d9a4cba7f60')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -350,7 +378,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-82a4e0ff-f711-47f7-bbec-dc6f9bb19be8 button');\n",
+              "        document.querySelector('#df-74d0b7d4-66a6-4dae-b744-3d9a4cba7f60 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -362,49 +390,13 @@
             ],
             "application/vnd.google.colaboratory.intrinsic+json": {
               "type": "dataframe",
-              "summary": "{\n  \"name\": \"df_trips\",\n  \"rows\": 2,\n  \"fields\": [\n    {\n      \"column\": \"Car_ID\",\n      \"properties\": {\n        \"dtype\": \"string\",\n        \"num_unique_values\": 1,\n        \"samples\": [\n          \"77403 (\\u041c947\\u041e\\u041a67) Renault Logan\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"Day_time\",\n      \"properties\": {\n        \"dtype\": \"date\",\n        \"min\": \"2025-03-08 18:05:23\",\n        \"max\": \"2025-03-09 14:14:22\",\n        \"num_unique_values\": 2,\n        \"samples\": [\n          \"2025-03-08 18:05:23\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"\\u0421oordinates\",\n      \"properties\": {\n        \"dtype\": \"string\",\n        \"num_unique_values\": 2,\n        \"samples\": [\n          \"55,768668\\u00b0, 37,831313\\u00b0\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"Speed_gl\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 3,\n        \"min\": 0,\n        \"max\": 5,\n        \"num_unique_values\": 2,\n        \"samples\": [\n          5\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"Ignition\",\n      \"properties\": {\n        \"dtype\": \"string\",\n        \"num_unique_values\": 2,\n        \"samples\": [\n          \"+\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"Latitude\",\n      \"properties\": {\n        \"dtype\": \"string\",\n        \"num_unique_values\": 2,\n        \"samples\": [\n          \"55.768668\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"Longitude\",\n      \"properties\": {\n        \"dtype\": \"string\",\n        \"num_unique_values\": 2,\n        \"samples\": [\n          \"37.831313\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"geometry\",\n      \"properties\": {\n        \"dtype\": \"geometry\",\n        \"num_unique_values\": 2,\n        \"samples\": [\n          \"POINT (37.831313 55.768668)\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    }\n  ]\n}"
+              "summary": "{\n  \"name\": \"df_trips\",\n  \"rows\": 2,\n  \"fields\": [\n    {\n      \"column\": \"Car_ID\",\n      \"properties\": {\n        \"dtype\": \"string\",\n        \"num_unique_values\": 1,\n        \"samples\": [\n          \"77107 (\\u041c530\\u0420\\u042367) Lada Granta\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"Day_time\",\n      \"properties\": {\n        \"dtype\": \"date\",\n        \"min\": \"2025-03-08 07:12:12\",\n        \"max\": \"2025-03-18 14:38:46\",\n        \"num_unique_values\": 2,\n        \"samples\": [\n          \"2025-03-18 14:38:46\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"\\u0421oordinates\",\n      \"properties\": {\n        \"dtype\": \"string\",\n        \"num_unique_values\": 2,\n        \"samples\": [\n          \"55,94242\\u00b0, 37,513113\\u00b0\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"Speed_gl\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 17,\n        \"min\": 7,\n        \"max\": 32,\n        \"num_unique_values\": 2,\n        \"samples\": [\n          32\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"Ignition\",\n      \"properties\": {\n        \"dtype\": \"string\",\n        \"num_unique_values\": 1,\n        \"samples\": [\n          \"\\u0412\\u043a\\u043b.\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"Latitude\",\n      \"properties\": {\n        \"dtype\": \"string\",\n        \"num_unique_values\": 2,\n        \"samples\": [\n          \"55.94242\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"Longitude\",\n      \"properties\": {\n        \"dtype\": \"string\",\n        \"num_unique_values\": 2,\n        \"samples\": [\n          \"37.513113\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"geometry\",\n      \"properties\": {\n        \"dtype\": \"geometry\",\n        \"num_unique_values\": 2,\n        \"samples\": [\n          \"POINT (37.513113 55.94242)\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    }\n  ]\n}"
             }
           },
           "metadata": {},
-          "execution_count": 169
+          "execution_count": 182
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# Загрузка данных о Выделенных полосах\n",
-        "gdf_bus_lanes = gpd.read_file(\"bus-lanes.geojson\")\n",
-        "# Выделяем линии Москвы\n",
-        "gdf_bus_lanes = gdf_bus_lanes[gdf_bus_lanes['short_name'] == 'Москва']\n",
-        "# Устанавливаем корректную CRS\n",
-        "gdf_bus_lanes = gdf_bus_lanes.set_crs(\"EPSG:4326\")\n",
-        "# gdf_bus_lanes.sample(2)"
-      ],
-      "metadata": {
-        "id": "B9gevWDfrQh7"
-      },
-      "execution_count": 170,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# Преобразуем CRS в метры (EPSG:3857)\n",
-        "gdf_bus_lanes = gdf_bus_lanes.to_crs(epsg=3857)\n",
-        "# Делаем buffer на 50 метров\n",
-        "gdf_bus_lanes[\"geometry\"] = gdf_bus_lanes.geometry.buffer(50)\n",
-        "# Возвращаем обратно в географические координаты (EPSG:4326)\n",
-        "gdf_bus_lanes = gdf_bus_lanes.to_crs(epsg=4326)\n",
-        "# gdf_bus_lanes.sample(2)\n",
-        "# Объединяем все POLYGON в один\n",
-        "bus_lanes_union = unary_union(gdf_bus_lanes.geometry)"
-      ],
-      "metadata": {
-        "id": "oMSoQpiOfelq"
-      },
-      "execution_count": 171,
-      "outputs": []
     },
     {
       "cell_type": "code",
@@ -429,7 +421,7 @@
       "metadata": {
         "id": "PICK5ukO8mZe"
       },
-      "execution_count": 172,
+      "execution_count": 185,
       "outputs": []
     },
     {
@@ -496,7 +488,7 @@
       "metadata": {
         "id": "y_kfJx-FzrRK"
       },
-      "execution_count": 173,
+      "execution_count": 186,
       "outputs": []
     },
     {
@@ -515,7 +507,7 @@
       "metadata": {
         "id": "anPFZIQoI_3P"
       },
-      "execution_count": 174,
+      "execution_count": 187,
       "outputs": []
     },
     {
@@ -536,17 +528,17 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ptz-ah7eOMtE",
-        "outputId": "9bb503d8-2442-414d-e9d7-4fca3ea2902e"
+        "outputId": "bce31e17-0757-4981-8626-7c05d68c763f"
       },
-      "execution_count": 175,
+      "execution_count": 188,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Общее время в движении: 75.98 часов\n",
-            "Общая экономия времени: 4.22 часов\n",
-            "% экономии времени: 5.56 %\n"
+            "Общее время в движении: 118.03 часов\n",
+            "Общая экономия времени: 1.09 часов\n",
+            "% экономии времени: 0.92 %\n"
           ]
         }
       ]
